# SecondBrain

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  docker-compose.yml
.claude/: PROJECT_STRUCTURE.md
agent-api/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tenants.json.example
agent-api/app/: config.py  main.py
agent-api/app/agent/: llm.py  loop.py  orchestrator.py  plan.py  planner.py  sanitize.py  worker.py
agent-api/app/auth/: guest.py  middleware.py
agent-api/app/mcp/: client.py  proxy_skill.py  schema.py  ssrf.py
agent-api/app/routes/: chat.py  guest.py  health.py  pending.py  profile.py  sessions.py  skills.py  tool_result.py
agent-api/app/session/: dir_store.py  factory.py  ids.py  manifest.py  migrate.py  queue.py  session_dir.py  state.py  store.py  ticket.py
agent-api/app/skills/: base.py  registry.py
agent-api/app/skills/avatar_control/: body.py  motion.py  poses.py  skill.py
agent-api/app/skills/calendar/: skill.py
agent-api/app/skills/clipboard/: skill.py
agent-api/app/tenants/: __init__.py  models.py  registry.py
agent-api/app/user/: context_builder.py  extractor.py  memory.py  pending.py  profile.py
agent-api/app/util/: ipc.py  json_safe.py
agent-api/tests/: conftest.py  test_auth.py  test_dir_store_queue.py  test_extractor.py  test_json_safe.py  test_mcp_schema.py  test_memory_store.py  test_migrate.py  test_orchestrator.py  test_planner.py  test_registry_filter.py  test_session_dir.py  test_sessions_and_loop.py  test_tenants.py  test_traces_route.py
(+38 files in other folders)
