[project]
name = "agent-api"
version = "0.1.0"
description = "SecondBrain agent API (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "ddgs>=9.0",
    "mcp>=1.9,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv]
package = false
